--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,6 +4,14 @@
         xmlns:th="http://www.thymeleaf.org"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 >
+<script src="https://checkoutshopper-live.cdn.adyen.com/checkoutshopper/sdk/6.30.0/adyen.js"
+    integrity="sha384-sioAmEpgV1x5KaMioXOtk8itF68PJZKMWXpzD7wEebjhzn1VZSJ6iMXcG34MlYx0"
+    crossorigin="anonymous"></script>
+ 
+<link rel="stylesheet"
+     href="https://checkoutshopper-live.cdn.adyen.com/checkoutshopper/sdk/6.30.0/adyen.css"
+     integrity="sha384-EajIgrs12jE8/4xUJjow1goFTYYeYCTDTot8jZqhspGJWuGtHMsj5b+Vl10oBOf0"
+     crossorigin="anonymous">
 <head>
     <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">
         Checkout Demo
